main part design

--- a/index.html
+++ b/index.html
@@ -87,18 +87,32 @@
         </div>
         <hr>
         <div>
-            <h4 class="text-primary my-3">Top Blogs</h4>
-            <div class="row">
-                <div class="col-lg-6 d-flex ">
+            <h4 class="text-primary ">Top Blogs</h4>
+            <div class="row g-3">
+                <div class="col-lg-6 col-md-6  d-flex  ">
                     <img width="70" src="images/294334417_5418401224891555_997499762785187548_n.jpg">
-                    <div>
-                        <h4>Md Alhaj Sarkar</h4>
+                    <div class="ps-2">
+                        <h6>Md Alhaj Sarkar</h6>
                         <p>students</p>
                     </div>
                 </div>
-                <div class="col-lg-4 d-flex">
+                <div class="col-lg-6  col-md-6 d-flex ">
                     <img width="70"  src="images/294334417_5418401224891555_997499762785187548_n.jpg">
-                    <div>
+                    <div  class="ps-2">
+                        <h4>Md Alhaj Sarkar</h4>
+                    <p>students</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 d-flex ">
+                    <img width="70"  src="images/294334417_5418401224891555_997499762785187548_n.jpg">
+                    <div  class="ps-2">
+                        <h4>Md Alhaj Sarkar</h4>
+                    <p>students</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 d-flex ">
+                    <img width="70"  src="images/294334417_5418401224891555_997499762785187548_n.jpg">
+                    <div  class="ps-2">
                         <h4>Md Alhaj Sarkar</h4>
                     <p>students</p>
                     </div>
